--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "test": "vitest",
+    "test:ui": "vitest --ui",
     "coverage": "vitest run --coverage",
     "lint": "npx eslint --fix",
     "preview": "vite preview",
@@ -21,6 +22,7 @@
     "@histoire/plugin-vue": "^0.10.7",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@vitejs/plugin-vue": "^3.1.0",
+    "@vitest/ui": "^0.25.1",
     "@vue/test-utils": "^2.0.2",
     "eslint": "^8.23.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
