--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   "dependencies": {
     "cross-fetch": "^3.1.5",
     "msw": "^0.48.0",
-    "vue": "^3.2.37",
-    "vue-axios": "^3.5.2"
+    "vue": "^3.2.37"
   },
   "devDependencies": {
     "@histoire/plugin-vue": "^0.10.7",
