--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "cross-fetch": "^3.1.5",
     "msw": "^0.48.0",
+    "sass": "^1.56.1",
     "vue": "^3.2.37"
   },
   "devDependencies": {
